# lm-refusal-eval

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: run_scaling_study.md  validate_judge.py
examples/data/: qwen2_0_5b_harmful_helpful.json  qwen2_1_5b_harmful_helpful.json  validation_set.jsonl
src/lre/: __init__.py  cache.py  cli.py  defense_in_depth.py  judge.py  prompts.py  provenance.py  report.py  runner.py  state.py  stats.py  suite_lint.py  synthetic.py
src/lre/data/prompts/: harmful_helpful.jsonl  jailbreak_styles.jsonl  refusal_calibration.jsonl
src/lre/models/: __init__.py  anthropic_api.py  base.py  hf_local.py  openai_api.py
tests/: conftest.py  test_anthropic_adapter.py  test_cache.py  test_cli.py  test_defense_in_depth.py  test_hf_local_adapter.py  test_judge.py  test_judge_protocol.py  test_openai_adapter.py  test_prompts.py  test_provenance.py  test_report.py  test_runner.py  test_sampling.py  test_state.py  test_stats.py  test_suite_lint.py  test_synthetic.py  test_validation_set.py
tests/fixtures/: cached_run.json
