[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "lm-refusal-eval"
version = "0.1.0"
description = "Reproducible refusal-rate evaluation harness for open-weight LLMs — adversarial-prompt benchmarks with byte-identical reruns"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Max Gorbuk", email = "103102868+mkzung@users.noreply.github.com" },
]
keywords = [
    "llm",
    "evaluation",
    "red-teaming",
    "refusal",
    "adversarial-robustness",
    "ai-safety",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "typing-extensions>=4.10",
    "click>=8.0",
]

[project.optional-dependencies]
hf = [
    "transformers>=4.40",
    "torch>=2.2",
]
all = [
    "transformers>=4.40",
    "torch>=2.2",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "mypy>=1.10",
    # Ruff pin: the lint + format output is version-sensitive (new rules
    # land between minor releases). Pin to the same exact version that
    # ``.pre-commit-config.yaml`` uses so local pre-commit runs and CI
    # cannot diverge. Bump in lock-step in both files.
    "ruff==0.15.13",
]

[project.scripts]
lre = "lre.cli:main"

[project.urls]
Homepage = "https://github.com/mkzung/lm-refusal-eval"
Repository = "https://github.com/mkzung/lm-refusal-eval"
Issues = "https://github.com/mkzung/lm-refusal-eval/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/lre"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "examples/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CITATION.cff",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long (formatter handles)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["torch.*", "transformers.*"]
# transformers ships partial stubs (incomplete unions on overloaded
# `from_pretrained` / `_Wrapped.__call__` from the docstring decorator,
# loose `.to()`/`.eval()` signatures). Runtime contract is stable; skip
# deep checking of transformers symbols to avoid false-positive strict
# errors that propagate into otherwise-typed code paths.
ignore_missing_imports = true
follow_imports = "skip"
follow_imports_for_stubs = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "ignore::DeprecationWarning:click.*",
]

[tool.coverage.run]
source = ["src/lre"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
